added about section in home

--- a/index.html
+++ b/index.html
@@ -11,16 +11,25 @@ title: openrampette by opencarecc
   -->
   {% include slick_slider.html %}
   <!-- {% include video.html %} -->
-  {% include release_notes.html %}
 </div>
+
+
 <div class="row">
-  {% include tutorials.html %}
+  <h1> Cos'è openrampette?</h1>
+  <span class="spiegona">
+    open rampette è un’iniziativa pilota per il miglioramento dell’accessibilità degli esercizi commerciali ed è promossa dal Comune di Milano e da WeMake | fablab e makerspace all’interno del progetto opencare.
+  </span>
 </div>
+
+
 <div class="row">
   {% include news.html %}
-  {% include contribute.html %}
 </div>
+
 <div class="row" style="border:none">
   {% include license.html %}
   {% include credits.html %}
 </div>
+
+<!-- {% include release_notes.html %} -->
+<!-- {% include contribute.html %} -->
