added placeholder images to posts

--- a/_posts/2016-08-31-new-post.html
+++ b/_posts/2016-08-31-new-post.html
@@ -2,6 +2,8 @@
 layout: post
 title: "New Post"
 date: 2016-08-31
+image: "https://i.ytimg.com/vi/AUUVfPy0UgI/maxresdefault.jpg"
+
 ---
 
 <h1>New Post</h1>
