added categories to post and page to filter the categories

--- a/_posts/2016-08-31-new-post.html
+++ b/_posts/2016-08-31-new-post.html
@@ -3,7 +3,10 @@ layout: post
 title: "New Post"
 date: 2016-08-31
 image: "https://i.ytimg.com/vi/AUUVfPy0UgI/maxresdefault.jpg"
-
+categories:
+  - procedura
+  - chiamata
+  - evento
 ---
 
 <h1>New Post</h1>
