added read more to short about in home

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@ title: openrampette by opencarecc
 
 <div class="row">
   <h1> Cos'è openrampette?</h1>
-  <span class="spiegona">
+  <p class="short-about">
     open rampette è un’iniziativa pilota per il miglioramento dell’accessibilità degli esercizi commerciali ed è promossa dal Comune di Milano e da WeMake | fablab e makerspace all’interno del progetto opencare.
-  </span>
+  </p>
+  <p>
+    <a class="more" href="{{ site.baseurl }}/about"><em>scopri dipiù >></em></a>
+  </p>
 </div>
 
 <div class="row">
