--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: home
 title: openrampette by opencarecc
+published: true
 ---
 
 <div class="row">
@@ -19,8 +20,8 @@ title: openrampette by opencarecc
             to show the video uncomment {% include video.html %}
             !!! the layout wasn't designed to show both the carousel and the video on the same row !!!
   -->
-  {% include slick_slider.html %}
-  <!-- {% include video.html %} -->
+  <!-- {% include slick_slider.html %} -->
+  {% include video.html %}
 </div>
 
 
