--- a/index.html
+++ b/index.html
@@ -15,8 +15,18 @@ published: true
 </div>
 
 <div class="row">
+  <h1>I temi trattati</h1>
+  <div class="row">
+
+   {% include topics.html %}
+ </div>
+
+</div>
+
+<div class="row">
    {% include slick_slider.html %}
 </div>
+
 
 
 <div class="row">
