added video in home

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: openrampette by opencarecc
 published: true
 ---
 
+<iframe width="853" height="480" src="https://www.youtube.com/embed/bARoyq8Tnto" frameborder="0" allowfullscreen></iframe>
 <div class="row">
   <h1> Cos'è openrampette?</h1>
   <p class="short-about">
