fix index details

--- a/index.html
+++ b/index.html
@@ -4,22 +4,20 @@ title: openrampette by opencarecc
 published: true
 ---
 
-<iframe width="853" height="480" src="https://www.youtube.com/embed/bARoyq8Tnto" frameborder="0" allowfullscreen></iframe>
+<iframe width="100%" height="480" src="https://www.youtube.com/embed/bARoyq8Tnto" frameborder="0" allowfullscreen></iframe>
 <div class="row">
   <h1> Cos'è openrampette?</h1>
   <p class="short-about">
-    open rampette è un’iniziativa pilota per il miglioramento dell’accessibilità degli esercizi commerciali ed è promossa dal Comune di Milano e da WeMake | fablab e makerspace all’interno del progetto opencare.
+    openrampette è un’iniziativa pilota per il miglioramento dell’accessibilità degli esercizi commerciali ed è promossa dal Comune di Milano e da WeMake | fablab e makerspace all’interno del progetto <a href="http://opencare.cc" target="_blank">opencare</a>.
   </p>
   <p>
-    <a class="more" href="{{ site.baseurl }}/about"><em>scopri dipiù >></em></a>
+    <a class="more" href="{{ site.baseurl }}/about"><em>Scopri di più &raquo;</em></a>
   </p>
 </div>
 
+<h1>I temi trattati</h1>
 <div class="row">
-  <h1>I temi trattati</h1>
-  <div class="row">
    {% include topics.html %}
- </div>
 </div>
 
 <div class="row">
