refact video section

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@ title: openrampette by opencarecc
 published: true
 ---
 
-<iframe width="100%" height="480" src="https://www.youtube.com/embed/bARoyq8Tnto" frameborder="0" allowfullscreen></iframe>
+<!-- <iframe width="100%" height="480" src="https://www.youtube.com/embed/bARoyq8Tnto" frameborder="0" allowfullscreen></iframe> -->
 <div class="row">
-  <h1> Cos'è openrampette?</h1>
+<!--   <h1> Cos'è openrampette?</h1>
   <p class="short-about">
     openrampette è un’iniziativa pilota per il miglioramento dell’accessibilità degli esercizi commerciali ed è promossa dal Comune di Milano e da WeMake | fablab e makerspace all’interno del progetto <a href="http://opencare.cc" target="_blank">opencare</a>.
   </p>
   <p>
     <a class="more" href="{{ site.baseurl }}/about"><em>Scopri di più &raquo;</em></a>
-  </p>
+  </p> -->
+  {% include video.html %}
 </div>
 
 <h1>I temi trattati</h1>
