add translation for tutorials include file

--- a/index.html
+++ b/index.html
@@ -37,3 +37,4 @@ lang: site.data["active_lang"]
 
 <!-- {% include release_notes.html %} -->
 <!-- {% include contribute.html %} -->
+<!-- {% include tutorials.html %} -->
