add title translation for home

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: home
-title: open rampette by opencarecc
+title:
+  en: Home
+  it: Home
 published: true
 lang: site.data["active_lang"]
 ---
