untranslate head and site title in tab bar

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
 layout: home
-title:
+<!-- title:
   en: Home
-  it: Home
+  it: Home -->
+title: Home
 published: true
 lang: site.data["active_lang"]
 ---
