add translation test for index

--- a/en/index.html
+++ b/en/index.html
@@ -7,10 +7,10 @@ title: Home
 published: true
 <!-- lang: site.data["active_lang"] -->
 ref: index
-lang: it
+lang: en
 ---
 
-IT {{ site.data[page.lang].lang.home }}
+EN {{ site.data[page.lang].lang.home }}
 <!-- <iframe width="100%" height="480" src="https://www.youtube.com/embed/bARoyq8Tnto" frameborder="0" allowfullscreen></iframe> -->
 <div class="row">
 <!--   <h1> Cos'è openrampette?</h1>
