add no-border class

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ IT {{ site.data[page.lang].lang.home }}
   {% include news.html %}
 </div>
 
-<div class="row" style="border:none">
+<div class="row no-border">
   {% include license.html %}
   {% include credits.html %}
 </div>
